--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/tailwindcss/tailwind.css"
             ]
           },
           "configurations": {
