--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/material": "~21.1.1",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "lucide-angular": "^0.563.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -39,7 +40,10 @@
     "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^21.1.0",
     "@angular/material": "^21.1.1",
+    "autoprefixer": "^10.4.24",
     "jsdom": "^27.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
