--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,10 @@ services:
     ports:
       - "4200:4200"
     volumes:
-      - ./frontend:/app
+      - .:/app
       - /app/node_modules
     networks:
       - app-network
-    depends_on:
-      - backend
 
 networks:
   app-network:
