--- a/angular.json
+++ b/angular.json
@@ -62,15 +62,16 @@
         },
         "serve": {
           "options": {
-                        "allowedHosts": [
-                                          "www.virtualnfc.com",
-                                          "virtualnfc.com",
-                                          "89.167.42.44",
-                                          "localhost",
-                                          "0.0.0.0"
-                                        ]
-    ,"port": 4200,
-    "host": "0.0.0.0",
+            "allowedHosts": [
+              "www.virtualnfc.com",
+              "virtualnfc.com",
+              "89.167.42.44",
+              "localhost",
+              "0.0.0.0"
+              ],
+              "port": 4200,
+              "host": "0.0.0.0"
+          },
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
@@ -88,4 +89,4 @@
       }
     }
   }
-}
+  }
