--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,9 @@
               "buildTarget": "frontend:build:production"
             },
             "development": {
-              "buildTarget": "frontend:build:development"
+              "buildTarget": "frontend:build:development",
+              "hmr": false
+
             }
           },
           "defaultConfiguration": "development",
