--- a/src/manifest.webmanifest.json
+++ b/src/manifest.webmanifest.json
@@ -8,7 +8,7 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "assets/icons/icon-192x192.png",
+      "src": "https://virtualnfcbucket.sfo3.digitaloceanspaces.com/uploads/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
